<resources>
    <string name="app_name">TIC TAC TOE</string>
    <string name="player2">PLAYER</string>
    <string name="player1">PLAYER</string>
    <string name="reset">RESET</string>
    <string name="text">PLAYER 1 NAME</string>
    <string name="text2">PLAYER 2 NAME</string>
    <string name="text3">THREE BY THREE</string>
    <string name="text4">FIVE BY FIVE</string>
    <string name="hint">Name</string>
    <string name="score">SCORE:0</string>

</resources>
