<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tictactoe.multiplayer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="25sp"
        android:textColor="#212121"
        android:textStyle="bold"
        android:text="@string/text"
        android:id="@+id/txtplayer"/>

    <EditText
        android:id="@+id/p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtplayer"
        android:layout_marginTop="17dp"
        android:hint="@string/hint"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/txtplayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtplayer"
        android:layout_alignStart="@+id/txtplayer"
        android:layout_below="@+id/p1"
        android:layout_marginTop="21dp"
        android:text="@string/text2"
        android:textColor="#212121"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtplayer2"
        android:hint="@string/hint"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/txtbythree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mthree"
        android:layout_alignBottom="@+id/mthree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:text="@string/text3"
        android:textColor="#212121"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mfive"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/txtbyfive"
        android:layout_toRightOf="@+id/txtbyfive"
        android:background="@drawable/arrow"
        android:paddingTop="60dp" />

    <TextView
        android:id="@+id/txtbyfive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtbythree"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtbythree"
        android:layout_marginBottom="65dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text4"
        android:textColor="#212121"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mthree"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/mfive"
        android:layout_alignStart="@+id/mfive"
        android:layout_below="@+id/txtplayer2"
        android:layout_marginTop="60dp"
        android:background="@drawable/arrow" />


</RelativeLayout>
