<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tictactoe.multiThree">

    <TextView
        android:id="@+id/pl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/board"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/board"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:freezesText="true"
        android:padding="8dp"
        android:text="@string/player1"
        android:textColor="#424242"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/score2"
        android:layout_alignEnd="@+id/board"
        android:layout_alignRight="@+id/board"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:freezesText="true"
        android:padding="8dp"
        android:text="@string/player2"
        android:textColor="#424242"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pl1"
        android:layout_alignRight="@+id/pl1"
        android:layout_below="@+id/pl1"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:textStyle="bold"
        android:text="@string/score" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pl2"
        android:layout_alignStart="@+id/pl2"
        android:layout_below="@+id/pl1"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/score"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/board"
        android:layout_below="@+id/pl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:rowCount="3"
        android:columnCount="3"
        android:padding="8dp" >

        <TableRow>

            <Button
                android:id="@+id/button_00"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#d32f2f"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

            <Button
                android:id="@+id/button_01"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#d32f2f"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

            <Button
                android:id="@+id/button_02"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#d32f2f"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="#d32f2f"
                android:gravity="center"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

            <Button
                android:id="@+id/button_11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="#d32f2f"
                android:gravity="center"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

            <Button
                android:id="@+id/button_12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="#d32f2f"
                android:gravity="center"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_20"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="#d32f2f"
                android:gravity="center"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

            <Button
                android:id="@+id/button_21"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="#d32f2f"
                android:gravity="center"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

            <Button
                android:id="@+id/button_22"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                android:background="#d32f2f"
                android:gravity="center"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button"
                android:freezesText="true"/>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="#212121"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/reset" />

</RelativeLayout>
